continued updates on home page to html and css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li class="nav__link">
               <a href="#" class="nav__link">Projects</a>
             </li>
-            <li class="nav__link"><a href="#" class="nav__link">Contact</a></li>
+            <li class="nav__link"><a href="#" class="nav__link--contact">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -55,6 +55,10 @@
                 <button class="button">
                   - Contact Us about Fill Line Electrical Engineering Services -
                 </button>
+                <div class="header__contact-row">
+                  <p class="header__call">Call Us:</p> 
+                  <p class="header_contact">623.236.3264</p>
+                </div>
               </div>
             </div>
           </section>
@@ -74,27 +78,29 @@
           </section>
           <section class="menu_cards">
             <ul class="cards">
-              <li class="card"><img src="/images/services_icon.png" class="card_icon"/><br><a href="#services" class="card_title">Services</a></li>
-              <li class="card"><img src="/images/projects_icon.png" class="card_icon"/><br><a href="#projects" class="card_title">Projects</a></li>
-              <li class="card"><img src="/images/contact2_icon.png" class="card_icon"/><br><a href="#contact" class="card_title">Contact Us</a></li>
+              <li class="card"><img src="images/services_icon.png" class="card_icon"/><br><a href="#services" class="card_title">Services</a></li>
+              <li class="card"><img src="images/projects_icon.png" class="card_icon"/><br><a href="#projects" class="card_title">Projects</a></li>
+              <li class="card"><img src="images/contact2_icon.png" class="card_icon"/><br><a href="#contact" class="card_title">Contact Us</a></li>
             </ul>
           </section>
             <section class="mission">
+              <!-- <div class="mission__image"></div> -->
+              <div class="mission__content">
               <h2>Our Mission</h2>
               <p>
-                At EDC Electrical Consulting, LLC, our mission is to lead the
-                electrical design community with innovative design consistent
-                with sound engineering.
+                At EDC Electrical Consulting, LLC, our mission is to lead the electrical design community by delivering innovative, code-compliant solutions rooted in sound engineering principles. We are committed to setting a higher standard of excellence in every project we undertake — from concept to completion.
               </p>
-
               <p>
-                We provide innovative, flexible and cost effective Electrical
-                design solutions for today’s state-of-the-art facilities. Our
-                Engineering staff has the knowledge and experience to assist our
-                clients in achieving functionally effective and financially
-                prudent design solutions.
+                We provide creative, flexible, and cost-effective electrical design solutions tailored to meet the evolving demands of today’s state-of-the-art facilities. Our team of skilled engineers brings a deep understanding of industry trends, code requirements, and real-world construction practices — ensuring designs that are not only technically robust but also practical to implement.
               </p>
-              <button class="button">- Learn More -</button>
+              <p>
+                Whether it’s a commercial build-out, educational facility, residential development, or complex industrial infrastructure, we collaborate closely with our clients and partners to ensure our solutions align with the project vision, budget, and schedule.
+              </p>
+              <p>
+                At EDC, we don’t just design systems — we power possibilities through innovation, reliability, and trusted engineering expertise.
+              </p>
+              <button class="button--mission">- Learn More -</button>
+            </div>
             </section>
             <h2>Electrical Construction & Engineering Documents</h2>
             <p>
