3rd update to html and css for home page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <li class="nav__link">
               <a href="#" class="nav__link">Projects</a>
             </li>
-            <li class="nav__link"><a href="#" class="nav__link--contact">Contact</a></li>
+            <li class="nav__link">
+              <a href="#" class="nav__link--contact">Contact</a>
+            </li>
           </ul>
         </nav>
       </header>
@@ -56,7 +58,7 @@
                   - Contact Us about Fill Line Electrical Engineering Services -
                 </button>
                 <div class="header__contact-row">
-                  <p class="header__call">Call Us:</p> 
+                  <p class="header__call">Call Us:</p>
                   <p class="header_contact">623.236.3264</p>
                 </div>
               </div>
@@ -70,39 +72,73 @@
             <p>
               At EDC Electrical Consulting, LLC we provide electrical design for
               architectural, educational, retail, commercial and residential
-              projects.</p>
-              <p>We are a full-service electrical engineering
-              organization.
+              projects.
             </p>
+            <p>We are a full-service electrical engineering organization.</p>
             <button class="button">- Reach Out For More Info -</button>
           </section>
           <section class="menu_cards">
             <ul class="cards">
-              <li class="card"><img src="images/services_icon.png" class="card_icon"/><br><a href="#services" class="card_title">Services</a></li>
-              <li class="card"><img src="images/projects_icon.png" class="card_icon"/><br><a href="#projects" class="card_title">Projects</a></li>
-              <li class="card"><img src="images/contact2_icon.png" class="card_icon"/><br><a href="#contact" class="card_title">Contact Us</a></li>
+              <li class="card">
+                <img src="images/services_icon.png" class="card_icon" /><br /><a
+                  href="#services"
+                  class="card_title"
+                  >Services</a
+                >
+              </li>
+              <li class="card">
+                <img src="images/projects_icon.png" class="card_icon" /><br /><a
+                  href="#projects"
+                  class="card_title"
+                  >Projects</a
+                >
+              </li>
+              <li class="card">
+                <img src="images/contact2_icon.png" class="card_icon" /><br /><a
+                  href="#contact"
+                  class="card_title"
+                  >Contact Us</a
+                >
+              </li>
             </ul>
           </section>
-            <section class="mission">
-              <!-- <div class="mission__image"></div> -->
-              <div class="mission__content">
-              <h2>Our Mission</h2>
+          <section class="mission">
+            <!-- <div class="mission__image"></div> -->
+            <div class="mission__content">
+              <h2 class="h2__mission">Our Mission</h2>
               <p>
-                At EDC Electrical Consulting, LLC, our mission is to lead the electrical design community by delivering innovative, code-compliant solutions rooted in sound engineering principles. We are committed to setting a higher standard of excellence in every project we undertake — from concept to completion.
+                At EDC Electrical Consulting, LLC, our mission is to lead the
+                electrical design community by delivering innovative,
+                code-compliant solutions rooted in sound engineering principles.
+                We are committed to setting a higher standard of excellence in
+                every project we undertake — from concept to completion.
               </p>
               <p>
-                We provide creative, flexible, and cost-effective electrical design solutions tailored to meet the evolving demands of today’s state-of-the-art facilities. Our team of skilled engineers brings a deep understanding of industry trends, code requirements, and real-world construction practices — ensuring designs that are not only technically robust but also practical to implement.
+                We provide creative, flexible, and cost-effective electrical
+                design solutions tailored to meet the evolving demands of
+                today’s state-of-the-art facilities. Our team of skilled
+                engineers brings a deep understanding of industry trends, code
+                requirements, and real-world construction practices — ensuring
+                designs that are not only technically robust but also practical
+                to implement.
               </p>
               <p>
-                Whether it’s a commercial build-out, educational facility, residential development, or complex industrial infrastructure, we collaborate closely with our clients and partners to ensure our solutions align with the project vision, budget, and schedule.
+                Whether it’s a commercial build-out, educational facility,
+                residential development, or complex industrial infrastructure,
+                we collaborate closely with our clients and partners to ensure
+                our solutions align with the project vision, budget, and
+                schedule.
               </p>
               <p>
-                At EDC, we don’t just design systems — we power possibilities through innovation, reliability, and trusted engineering expertise.
+                At EDC, we don’t just design systems — we power possibilities
+                through innovation, reliability, and trusted engineering
+                expertise.
               </p>
               <button class="button--mission">- Learn More -</button>
             </div>
-            </section>
-            <h2>Electrical Construction & Engineering Documents</h2>
+          </section>
+          <section class="content__block">
+            <h2 class="h2">Electrical Construction & Engineering Documents</h2>
             <p>
               At EDC Electrical Consulting, LLC, we work harder, respond faster
               and deliver more because we are family owned and have a vested
@@ -111,7 +147,7 @@
               high-quality, cost-effective design and construction of projects
               that work for you. We're simply designed for your success.
             </p>
-            <h2>Our Successful Projects</h2>
+            <h2 class="h2">Our Successful Projects</h2>
             <p>
               Since 2009, we have done over 90% of our work in Arizona, but we
               are available throughout all 50 states to assist your with your
@@ -121,7 +157,7 @@
             </p>
           </section>
         </main>
-        <footer>
+        <footer class="footer">
           <h4>EDC Electrical Consulting, LLC</h4>
           <ul>
             <li>Buckeye, AZ</li>
@@ -129,16 +165,18 @@
             <li>info@edcconsult.com</li>
             <li>Monday - Friday: 8AM - 5PM</li>
           </ul>
-          <nav class="nav__footer">
-            <ul>
-              <li>Home</li>
-              <li>Services</li>
-              <li>Project</li>
-              <li>Contact</li>
+          <nav class="footer__nav">
+            <ul class="footer__nav-links">
+              <li class="footer__nav-link">Home</li>
+              <li class="footer__nav-link">Services</li>
+              <li class="footer__nav-link">Project</li>
+              <li class="footer__nav-link">Contact</li>
             </ul>
+            <p class="copyright">
+              © 2025, EDC Electrical Consulting, LLC. All Rights Reserved.
+            </p>
           </nav>
           <!-- Copyright -->
-          <p>© 2019, EDC Electrical Consulting, LLC. All Rights Reserved.</p>
         </footer>
       </div>
     </div>
