Update 4 to html and css on home page

--- a/index.html
+++ b/index.html
@@ -158,13 +158,20 @@
           </section>
         </main>
         <footer class="footer">
-          <h4>EDC Electrical Consulting, LLC</h4>
-          <ul>
-            <li>Buckeye, AZ</li>
-            <li>(623)236-3264</li>
-            <li>info@edcconsult.com</li>
-            <li>Monday - Friday: 8AM - 5PM</li>
-          </ul>
+          <div class="footer__columns">
+            <ul>
+              <li><img src="images/logo2.png" height="50px" /></li>
+              <li><p>EDC Electrical Consulting, LLC</p></li>
+            </ul>
+            <ul>
+              <li>Buckeye, AZ</li>
+              <li>(623)236-3264</li>
+            </ul>
+            <ul>
+              <li>info@edcconsult.com</li>
+              <li>Monday - Friday: 8AM - 5PM</li>
+            </ul>
+          </div>
           <nav class="footer__nav">
             <ul class="footer__nav-links">
               <li class="footer__nav-link">Home</li>
