main change was adding smooth transition to nav, buttons and menu cards

--- a/index.html
+++ b/index.html
@@ -77,31 +77,75 @@
             <p>We are a full-service electrical engineering organization.</p>
             <button class="button">- Reach Out For More Info -</button>
           </section>
+
+          <!-- MENU CARDS WITH FADE TRANSITION -->
           <section class="menu_cards">
             <ul class="cards">
               <li class="card">
-                <img src="images/services_icon.png" class="card_icon" /><br /><a
-                  href="#services"
-                  class="card_title"
-                  >Services</a
-                >
+                <div class="card_icon-wrapper">
+                  <img
+                    src="images/services2_icon.png"
+                    class="card_icon default"
+                  />
+                  <img
+                    src="images/services2_icon_hover.png"
+                    class="card_icon hover"
+                  />
+                </div>
+                <a href="#services" class="card_title">Services</a>
               </li>
+
               <li class="card">
-                <img src="images/projects_icon.png" class="card_icon" /><br /><a
-                  href="#projects"
-                  class="card_title"
-                  >Projects</a
-                >
+                <div class="card_icon-wrapper">
+                  <img
+                    src="images/projects_icon.png"
+                    class="card_icon default"
+                  />
+                  <img
+                    src="images/projects_icon_hover.png"
+                    class="card_icon hover"
+                  />
+                </div>
+                <a href="#projects" class="card_title">Projects</a>
               </li>
+
               <li class="card">
-                <img src="images/contact2_icon.png" class="card_icon" /><br /><a
-                  href="#contact"
-                  class="card_title"
-                  >Contact Us</a
-                >
+                <div class="card_icon-wrapper">
+                  <img
+                    src="images/contact2_icon.png"
+                    class="card_icon default"
+                  />
+                  <img
+                    src="images/contact2_icon_hover.png"
+                    class="card_icon hover"
+                  />
+                </div>
+                <a href="#contact" class="card_title">Contact Us</a>
               </li>
             </ul>
           </section>
+          <!-- <section class="menu_cards">
+            <ul class="cards">
+              <li class="card">
+                <img
+                  src="images/services2_icon.png"
+                  class="card_icon services-icon"
+                /><br /><a href="#services" class="card_title">Services</a>
+              </li>
+              <li class="card">
+                <img
+                  src="images/projects_icon.png"
+                  class="card_icon projects-icon"
+                /><br /><a href="#projects" class="card_title">Projects</a>
+              </li>
+              <li class="card">
+                <img
+                  src="images/contact2_icon.png"
+                  class="card_icon contact-icon"
+                /><br /><a href="#contact" class="card_title">Contact Us</a>
+              </li>
+            </ul>
+          </section> -->
           <section class="mission">
             <!-- <div class="mission__image"></div> -->
             <div class="mission__content">
